<resources>
    <string name="app_name">EncryptionApp2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Substitution</string>
    <string name="title_breaker">Breaker</string>
    <string name="title_aes">Bitmap</string>
    <string name="keyText">Key:</string>
    <string name="keyPlaceholder">No active key.</string>
    <string name="createKeyButton">Generate Key</string>
    <string name="headerSubstitution">Substitution Cipher</string>
    <string name="plainTextHint">Enter plain text to be encrypted.</string>
    <string name="encryptButtonText">Encrypt</string>
    <string name="cipherTextPlaceholder">Cipher text appears here.</string>
    <string name="decryptButtonText">Decrypt</string>
    <string name="cipherTextHint">Enter cipher text.</string>

    <string name="customKeyHint">Enter Custom Key</string>
    <string name="customKeyInstructions">Key must contain each letter of alphabet once.</string>
    <string name="saveKeyButton">Save Key</string>
    <string name="cipherToBreakHint">Enter cipher to break.</string>
    <string name="breakCipherButton">Break Cipher</string>
    <string name="breakerResultText">Substitution breaker results appear here.</string>
    <string name="load_bitmap">Load Bitmap</string>
    <string name="open_file">Open File</string>
    <string name="file_name">FileName:</string>
    <string name="fileNamePlaceholder">No file open.</string>
    <string name="importKey">Import Key</string>
    <string name="title_file_encryption">Files</string>
    <string name="email_file">Email</string>
    <string name="originalFileHeader">Encryption</string>
    <string name="encryptedFileHeader">Decryption</string>
    <string name="ivHeader">IV</string>
    <string name="ivPlaceholder">No active IV.</string>
    <string name="importIvButton">Import IV</string>
    <string name="imageViewLabelOriginal">Original</string>
    <string name="imageViewLabelECB">ECB Mode</string>
    <string name="imageViewLabelCBC">CBC Mode</string>
    <string name="durationLabel">Duration:</string>
    <string name="fileSizeLabel">File Size:</string>
    <string name="durationPlaceholder">N/A ms</string>
    <string name="fileSizePlaceholder">Bytes will appear here.</string>
    <string name="desLabel">DES Encryption Results</string>
    <string name="aesLabel">AES Encryption Results</string>
    <string name="title_Aes_vs_Des">AES vs DES</string>
    <string name="origanlFileIvPlaceholder">IV auto-generated during encryption.</string>
</resources>