<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".ui.files.FileEncryptionFragment">

    <TextView
        android:id="@+id/ivTextViewOriginalFile"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/origanlFileIvPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/keyHeaderOriginalFile"
        app:layout_constraintTop_toBottomOf="@+id/keyTextViewOriginalFile" />

    <TextView
        android:id="@+id/ivHeaderOriginalFile"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/ivHeader"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyHeaderOriginalFile" />

    <TextView
        android:id="@+id/keyTextViewOriginalFile"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keyPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/keyHeaderOriginalFile"
        app:layout_constraintTop_toBottomOf="@+id/importKeyButtonOriginalFile" />

    <TextView
        android:id="@+id/keyHeaderOriginalFile"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keyText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importKeyButtonOriginalFile" />

    <Button
        android:id="@+id/openFileButtonOriginalFile"
        style="@style/buttonStyle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/open_file"
        app:icon="@drawable/open_file_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originalFileHeaderTextView" />

    <TextView
        android:id="@+id/fileNameTextViewOriginalFile"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fileNamePlaceholder"
        app:layout_constraintBottom_toBottomOf="@+id/openFileButtonOriginalFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openFileButtonOriginalFile"
        app:layout_constraintTop_toTopOf="@+id/openFileButtonOriginalFile" />

    <Button
        android:id="@+id/generateKeyButton"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/createKeyButton"
        app:layout_constraintBottom_toTopOf="@+id/keyTextViewOriginalFile"
        app:layout_constraintEnd_toStartOf="@+id/importKeyButtonOriginalFile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openFileButtonOriginalFile" />


    <Button
        android:id="@+id/importKeyButtonOriginalFile"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/importKey"
        app:layout_constraintBottom_toTopOf="@+id/keyTextViewOriginalFile"
        app:layout_constraintEnd_toStartOf="@+id/saveKeyAESButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/generateKeyButton"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTextViewOriginalFile" />

    <Button
        android:id="@+id/saveKeyAESButton"
        style="@style/buttonStyle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/saveKeyButton"
        app:icon="@drawable/save_file_icon"
        app:layout_constraintBottom_toTopOf="@+id/keyTextViewOriginalFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/importKeyButtonOriginalFile"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTextViewOriginalFile" />

    <Button
        android:id="@+id/encryptFileButton"
        style="@style/buttonStyle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="@string/encryptButtonText"
        app:icon="@drawable/ic_home_lock"
        app:layout_constraintEnd_toStartOf="@+id/emailFileButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTextViewOriginalFile" />

    <Button
        android:id="@+id/emailFileButton"
        style="@style/buttonStyle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/email_file"
        app:icon="@drawable/ic_file_encryption_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/encryptFileButton"
        app:layout_constraintTop_toBottomOf="@+id/ivTextViewOriginalFile" />

    <TextView
        android:id="@+id/originalFileHeaderTextView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/originalFileHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/secondaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptFileButton">

        <TextView
            android:id="@+id/ivTextViewEncryptedFile"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ivPlaceholder"
            app:layout_constraintBottom_toTopOf="@+id/importKeyButtonEncryptedFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivHeaderEncryptedFile"
            app:layout_constraintTop_toBottomOf="@+id/keyTextViewEncryptedFile" />

        <TextView
            android:id="@+id/ivHeaderEncryptedFile"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/ivHeader"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyHeaderEncryptedFile" />

        <TextView
            android:id="@+id/keyTextViewEncryptedFile"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="242dp"
            android:text="@string/keyPlaceholder"
            app:layout_constraintBottom_toTopOf="@+id/ivTextViewEncryptedFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyHeaderEncryptedFile"
            app:layout_constraintTop_toBottomOf="@+id/openFileButtonEncryptedFile" />

        <TextView
            android:id="@+id/keyHeaderEncryptedFile"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/keyText"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivTextViewEncryptedFile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openFileButtonEncryptedFile" />

        <Button
            android:id="@+id/openFileButtonEncryptedFile"
            style="@style/buttonStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_file"
            app:icon="@drawable/open_file_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptedFileHeaderTextView" />

        <TextView
            android:id="@+id/fileNameTextViewEncryptedFile"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fileNamePlaceholder"
            app:layout_constraintBottom_toBottomOf="@+id/openFileButtonEncryptedFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/openFileButtonEncryptedFile"
            app:layout_constraintTop_toTopOf="@+id/openFileButtonEncryptedFile" />

        <Button
            android:id="@+id/importKeyButtonEncryptedFile"
            style="@style/buttonStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/importKey"

            app:layout_constraintEnd_toStartOf="@+id/importIvButtonEncryptedFile"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivTextViewEncryptedFile" />

        <Button
            android:id="@+id/importIvButtonEncryptedFile"
            style="@style/buttonStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/importIvButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/importKeyButtonEncryptedFile"
            app:layout_constraintTop_toBottomOf="@+id/ivTextViewEncryptedFile" />

        <Button
            android:id="@+id/decryptFileButton"
            style="@style/buttonStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryDarkColor"
            android:text="@string/decryptButtonText"
            app:icon="@drawable/decrypt_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importKeyButtonEncryptedFile" />

        <TextView
            android:id="@+id/encryptedFileHeaderTextView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/encryptedFileHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>