<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.substitution.SubstitutionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        style="@style/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saveKeyButton"
                style="@style/buttonStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/saveKeyButton"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/createKeyButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customKeyEditText" />

            <EditText
                android:id="@+id/customKeyEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/customKeyHint"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/createKeyButton"
                style="@style/buttonStyle2"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/createKeyButton"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveKeyButton"
                app:layout_constraintTop_toBottomOf="@+id/customKeyEditText"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/keyLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regularMargin"
        android:layout_marginStart="12dp"
        android:padding="@dimen/regularPadding"
        android:text="@string/keyText"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/keyTextView"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keyPlaceholder"
        android:textAlignment="viewEnd"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/keyLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/cardViewStyle"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/encryptButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyTextView">

        <EditText
            android:id="@+id/plainEditText"
            style="@style/editTextMultiLineStyle"
            android:layout_height="match_parent"
            android:hint="@string/plainTextHint"
            android:inputType="textMultiLine"
            android:textColorHint="#004D40"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/encryptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regularMargin"
        android:text="@string/encryptButtonText"
        android:textColor="#000000"
        app:icon="@drawable/ic_home_lock"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/cardViewStyle2"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decryptButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/cipherEditText"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/cipherTextHint"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true"
            android:text="@string/cipherTextPlaceholder"
            android:textAlignment="textStart"
            android:textColor="#004D40"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/decryptButton"
        style="@style/buttonStyle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decryptButtonText"
        app:icon="@drawable/decrypt_icon"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>