<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bitmap.BitmapFragment">

    <ImageView
        android:id="@+id/imageViewEncryptedEcb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/imageViewEncryptedCBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewOriginal"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/keyLabelTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regularMargin"
        android:layout_marginStart="12dp"
        android:padding="@dimen/regularPadding"
        android:text="@string/keyText"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoadBitmap" />

    <TextView
        android:id="@+id/keyTextView2"
        style="@style/textStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keyPlaceholder"
        android:textAlignment="viewEnd"
        android:textColor="@color/primaryTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/keyLabelTextView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoadBitmap" />

    <Button
        android:id="@+id/buttonLoadBitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_bitmap"
        android:textColor="@color/black"
        app:icon="@drawable/ic_aes_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewOriginal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewEncryptedEcb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyTextView2"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageViewEncryptedCBC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEncryptedEcb"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/imageViewLabelOriginal"
        style="@style/imageViewLabel1"
        android:text="@string/imageViewLabelOriginal"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOriginal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewOriginal" />

    <TextView
        android:id="@+id/imageViewLabelECB"
        style="@style/imageViewLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageViewLabelECB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewEncryptedEcb" />

    <TextView
        android:id="@+id/imageViewLabelCBC"
        style="@style/imageViewLabel1"
        android:text="@string/imageViewLabelCBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEncryptedEcb" />

</androidx.constraintlayout.widget.ConstraintLayout>