<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="healym3.encryptionapp2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_breaker"
            app:destination="@id/navigation_breaker"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_aes"
            app:destination="@id/navigation_aes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_breaker"
        android:name="healym3.encryptionapp2.ui.breaker.BreakerFragment"
        android:label="@string/title_breaker"
        tools:layout="@layout/fragment_breaker" >
        <action
            android:id="@+id/action_navigation_breaker_to_navigation_aes"
            app:destination="@id/navigation_aes"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_breaker_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_aes"
        android:name="healym3.encryptionapp2.ui.aes.AesFragment"
        android:label="@string/title_aes"
        tools:layout="@layout/fragment_aes" >
        <action
            android:id="@+id/action_navigation_aes_to_navigation_breaker"
            app:destination="@id/navigation_breaker"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_navigation_aes_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_file_encryption"
        android:name="healym3.encryptionapp2.ui.FileEncryptionFragment"
        android:label="file_encryption_fragment"
        tools:layout="@layout/file_encryption_fragment" />
</navigation>